Geometry Nodes: Crash in link-drag search involving missing Texture subtype in Switch Node #122356

Closed
opened 2024-05-28 10:35:40 +02:00 by quackarooni · 8 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 605 Intel 4.6.0 - Build 27.20.100.8189

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-26 20:11, hash: c3b985906d39
Worked: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727

Short description of error
The Texture subtype has disappeared for Switch nodes since 4.1. (not fully sure if this was intended or not)
However, it still pops up as a result when using the link-drag search on a Texture socket, where selecting it leads to Blender freezing and then subsequently crashing.

Exact steps for others to reproduce the error

1.) Have a socket with the Texture type. (This can be easily done by adding one in a nodegroup's inputs/outputs)
2.) Perform a link-drag search on it.
3.) Select any option with the Switch node.
4.) Blender should hang up and then crash afterwards.

(Crash dump of when I tested this is also included below.)

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 605 Intel 4.6.0 - Build 27.20.100.8189 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-26 20:11, hash: `c3b985906d39` Worked: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` **Short description of error** The `Texture` subtype has disappeared for `Switch` nodes since 4.1. *(not fully sure if this was intended or not)* However, it still pops up as a result when using the link-drag search on a `Texture` socket, where selecting it leads to Blender freezing and then subsequently crashing. **Exact steps for others to reproduce the error** <video src="/attachments/337fb7cb-2de6-498b-a4f6-de4dfcfcb717" title="Missing Texture Subtype in Switch Node Leading to Crash.mp4" controls></video> 1.) Have a socket with the `Texture` type. *(This can be easily done by adding one in a nodegroup's inputs/outputs)* 2.) Perform a link-drag search on it. 3.) Select any option with the `Switch` node. 4.) Blender should hang up and then crash afterwards. *(Crash dump of when I tested this is also included below.)*
quackarooni added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-05-28 10:35:40 +02:00
Member

Hi, thanks for the report. Can confirm. Got assert in debug build (missing declaration? checking...)

Hi, thanks for the report. Can confirm. Got assert in debug build (missing declaration? checking...)
Member

Looks like switch node does not support "texture". AFAICS few lines of changes will support texture socket type

Looks like switch node does not support "texture". AFAICS few lines of changes will support texture socket type
Author
Contributor

Looks like switch node does not support "texture". AFAICS few lines of changes will support texture socket type

Yeah, looking across different versions, it seems to have disappeared sometime between 4.0 and 4.1.
Clipboard - May 28, 2024 9 16 AM

Am not fully sure if this itself is a bug, or was intentionally removed.
(Since no other nodes other than Reroute and Switch have/allowed for a Texture socket, it doesn't really have much practical use in GN right now.)

> Looks like switch node does not support "texture". AFAICS few lines of changes will support texture socket type Yeah, looking across different versions, it seems to have disappeared sometime between 4.0 and 4.1. ![Clipboard - May 28, 2024 9 16 AM](/attachments/2824c918-3992-4fdd-9f29-2d1022691b8b) Am not fully sure if this itself is a bug, or was intentionally removed. _(Since no other nodes other than Reroute and Switch have/allowed for a Texture socket, it doesn't really have much practical use in GN right now.)_
Member

Following change should fix this:

diff --git a/source/blender/nodes/geometry/nodes/node_geo_switch.cc b/source/blender/nodes/geometry/nodes/node_geo_switch.cc
index 21f37402701..484c0623f53 100644
--- a/source/blender/nodes/geometry/nodes/node_geo_switch.cc
+++ b/source/blender/nodes/geometry/nodes/node_geo_switch.cc
@@ -237,7 +237,8 @@ static void node_rna(StructRNA *srna)
                                                SOCK_COLLECTION,
                                                SOCK_MATERIAL,
                                                SOCK_IMAGE,
-                                               SOCK_MENU);
+                                               SOCK_MENU,
+                                               SOCK_TEXTURE);
                                  });
       });
 }
diff --git a/source/blender/nodes/intern/node_declaration.cc b/source/blender/nodes/intern/node_declaration.cc
index 53036cd56d7..cb5848fb149 100644
--- a/source/blender/nodes/intern/node_declaration.cc
+++ b/source/blender/nodes/intern/node_declaration.cc
@@ -455,6 +455,8 @@ BaseSocketDeclarationBuilder &NodeDeclarationBuilder::add_input(
       return this->add_input<decl::Material>(name, identifier);
     case SOCK_MENU:
       return this->add_input<decl::Menu>(name, identifier);
+    case SOCK_TEXTURE:
+      return this->add_input<decl::Texture>(name, identifier);
     default:
       BLI_assert_unreachable();
       return this->add_input<decl::Float>("", "");
@@ -500,6 +502,8 @@ BaseSocketDeclarationBuilder &NodeDeclarationBuilder::add_output(
       return this->add_output<decl::Material>(name, identifier);
     case SOCK_MENU:
       return this->add_output<decl::Menu>(name, identifier);
+    case SOCK_TEXTURE:
+      return this->add_output<decl::Texture>(name, identifier);
     default:
       BLI_assert_unreachable();
       return this->add_output<decl::Float>("", "");
diff --git a/source/blender/nodes/intern/node_socket.cc b/source/blender/nodes/intern/node_socket.cc
index 278b520950e..2f94248aea3 100644
--- a/source/blender/nodes/intern/node_socket.cc
+++ b/source/blender/nodes/intern/node_socket.cc
@@ -530,7 +530,8 @@ bool socket_type_supports_fields(const eNodeSocketDatatype socket_type)
               SOCK_INT,
               SOCK_ROTATION,
               SOCK_MENU,
-              SOCK_MATRIX);
+              SOCK_MATRIX,
+              SOCK_TEXTURE);
 }
Following change should fix this: ```Diff diff --git a/source/blender/nodes/geometry/nodes/node_geo_switch.cc b/source/blender/nodes/geometry/nodes/node_geo_switch.cc index 21f37402701..484c0623f53 100644 --- a/source/blender/nodes/geometry/nodes/node_geo_switch.cc +++ b/source/blender/nodes/geometry/nodes/node_geo_switch.cc @@ -237,7 +237,8 @@ static void node_rna(StructRNA *srna) SOCK_COLLECTION, SOCK_MATERIAL, SOCK_IMAGE, - SOCK_MENU); + SOCK_MENU, + SOCK_TEXTURE); }); }); } diff --git a/source/blender/nodes/intern/node_declaration.cc b/source/blender/nodes/intern/node_declaration.cc index 53036cd56d7..cb5848fb149 100644 --- a/source/blender/nodes/intern/node_declaration.cc +++ b/source/blender/nodes/intern/node_declaration.cc @@ -455,6 +455,8 @@ BaseSocketDeclarationBuilder &NodeDeclarationBuilder::add_input( return this->add_input<decl::Material>(name, identifier); case SOCK_MENU: return this->add_input<decl::Menu>(name, identifier); + case SOCK_TEXTURE: + return this->add_input<decl::Texture>(name, identifier); default: BLI_assert_unreachable(); return this->add_input<decl::Float>("", ""); @@ -500,6 +502,8 @@ BaseSocketDeclarationBuilder &NodeDeclarationBuilder::add_output( return this->add_output<decl::Material>(name, identifier); case SOCK_MENU: return this->add_output<decl::Menu>(name, identifier); + case SOCK_TEXTURE: + return this->add_output<decl::Texture>(name, identifier); default: BLI_assert_unreachable(); return this->add_output<decl::Float>("", ""); diff --git a/source/blender/nodes/intern/node_socket.cc b/source/blender/nodes/intern/node_socket.cc index 278b520950e..2f94248aea3 100644 --- a/source/blender/nodes/intern/node_socket.cc +++ b/source/blender/nodes/intern/node_socket.cc @@ -530,7 +530,8 @@ bool socket_type_supports_fields(const eNodeSocketDatatype socket_type) SOCK_INT, SOCK_ROTATION, SOCK_MENU, - SOCK_MATRIX); + SOCK_MATRIX, + SOCK_TEXTURE); } ```
Member

it seems to have disappeared sometime between 4.0 and 4.1...Am not fully sure if this itself is a bug, or was intentionally removed.

Don't know either, Looks like it was removed in f7383cfe9b but reason is missing in commit message.
@JacquesLucke , if it was by mistake, do you want me to make PR for the above fix?

> it seems to have disappeared sometime between 4.0 and 4.1...Am not fully sure if this itself is a bug, or was intentionally removed. Don't know either, Looks like it was removed in f7383cfe9b but reason is missing in commit message. @JacquesLucke , if it was by mistake, do you want me to make PR for the above fix?

We delete this by design, better to delete this type of drag-search.

We delete this by design, better to delete this type of drag-search.
Member

We delete this by design, better to delete this type of drag-search.

Okay, make sense to skip sock_texture case.

> We delete this by design, better to delete this type of drag-search. Okay, make sense to skip `sock_texture` case.
Pratik Borhade self-assigned this 2024-05-28 12:49:51 +02:00
Member

@mod_moder, !122370 make sense? :)

@mod_moder, !122370 make sense? :)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-06-14 17:59:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#122356
No description provided.