Fix #122356: Drag search crash connecting texture socket to switch node

Likely caused by f7383cfe9b
If removal of texture type from switch node is an expected behavior,
crash could be fixed by not inlcuding the switch node in search results
when link-drag search is initiated from texture socket